# templates-lang-cpp

./: .commitlintrc.yaml  .editorconfig  .envrc  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md  copier.yaml  flake.nix  justfile  typos.toml
.copier/: answers.base.yaml  post-migration.sh  update-order
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml
.github/actions/commitlint/: action.yaml  commitlint.sh
.github/actions/copier-update/: action.yaml  update.sh
.github/actions/guard-source-branch/: action.yaml  guard.sh
.github/actions/lint/: action.yaml
.github/workflows/: ci.yaml  codeql.yaml  guard.yaml  release.yaml  update-template.yaml
.just/: base.just
docs/: releasing.md
docs/adr/: 0000-template.md  README.md
nix/base/: checks.nix  default.nix  hooks.nix  shell.nix  treefmt.nix
template/: .clang-format  .clang-tidy  .cmake-format.yaml  .codecov.yaml  .envrc.jinja  .gitignore  CMakeLists.txt.jinja  CMakePresets.json.jinja  README.md.jinja  typos.toml  {% if compiler_matrix != 'clang' %}.clangd{% endif %}.jinja
template/.copier/: post-migration.cpp.sh
template/.just/: cpp.just.jinja
template/cmake/: CompilerCheck.cmake  Coverage.cmake  Dependencies.cmake  Lto.cmake  Options.cmake.jinja  PackageHelpers.cmake  ProjectConfig.cmake.in  ProjectOptions.cmake  Sanitizers.cmake  TestHelpers.cmake  UserOptions.cmake  version.hpp.in.jinja
template/source/: CMakeLists.txt
template/source/{{ _external_data.base.project_name }}/: CMakeLists.txt  main.cpp.jinja
template/source/{{ _external_data.base.project_name }}/greeting/: CMakeLists.txt  greeting.cpp.jinja  greeting.hpp.jinja
template/{% if enable_docs %}docs{% endif %}/: Doxyfile.jinja
template/{% if enable_profiling %}workloads{% endif %}/: CMakeLists.txt
(+36 files in other folders)
